--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "consolidate": "~0.9.1",
     "express": "3.x",
+    "jquery": "^2.1.4",
     "mongodb": "~1.3.10",
     "swig": "^1.4.2"
   },
