--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "3.x",
     "jquery": "^2.1.4",
     "mongodb": "~1.3.10",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "body-parser": "^1.13.3"
   },
   "author": "Shaun Verch",
   "license": "BSD"
